--- a/packages/locales/locales/zh/translation.json
+++ b/packages/locales/locales/zh/translation.json
@@ -1,7 +1,6 @@
 {
   "extend": {
-    "application_name": "{{brand}}",
-    "title": "{{slogan}}",
+    "title": "{{name}} | 任何鏈上交易任何代幣",
     "description": "在首個與鏈無關的交易平台上，於任何鏈上交易任何代幣。無需考慮鏈的選擇。100%去中心化且自托管。",
     "languages": {
       "en": "English",
@@ -46,7 +45,7 @@
       "launch_token": "創建代幣"
     },
     "settings": {
-      "account_name": "{{brand}} 帳戶",
+      "account_name": "{{application_name}} 帳戶",
       "deposit": "充值",
       "preferences": "偏好設定",
       "social_medias": "社交媒體",
